--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="txt_configuring">Configurando</string>
     <string name="hint_email_address">fulano@fpc.ufba.br</string>
     <string name="hint_password">Senha</string>
+    <string name="txt_identification">Identificação</string>
 </resources>
